# orbitatlas3d

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NOTICE  README.md
.github/workflows/: ci.yml  deploy.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: __init__.py  routes_meta.py  routes_overflight.py  routes_satellites.py  routes_visibility.py
apps/api/app/core/: config.py  db.py  logging.py  schemas.py
apps/api/app/scripts/: refresh_space_track_cache.py
apps/api/migrations/: 0001_init.sql  0002_views.sql
apps/api/tests/: test_placeholder.py
apps/web/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/assets/models/: README.md
apps/web/e2e/: playwright.config.ts
apps/web/e2e/specs/: vertical-slice.spec.ts
apps/web/public/: _redirects
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: Filters.tsx  GroundTrack.tsx  HUDControls.tsx  Help.tsx  InfoPanel.tsx  Map2D.tsx  ModelLoader.tsx  OrbitPath.tsx  SatList.tsx  SatelliteLayer.tsx  SearchBar.tsx  Viewer3D.tsx  VisibilityWidget.tsx
apps/web/src/lib/: celestrak.ts  cesiumInit.ts  constellationFilters.ts  geocode.ts  tleClient.ts  visibility.ts
data-seed/: cities.sql  countries.sql  sample_satellites.csv  sample_tles.json
infra/docker/: .gitignore  api.Dockerfile  docker-compose.yml  migrate.Dockerfile  refresh_space_track_cache.sh  st_cookies.txt  web.Dockerfile
scripts/: devdoctor.sh  doctor_rules.yaml  migrate.sh  seed.sh  watchdog.py
(+12 files in other folders)
